# pytype

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists_toplevel.txt  CONTRIBUTING.md  DESCRIPTION.rst  Dockerfile.dev  MANIFEST.in  README.md  pylintrc  pyproject.toml  q  requirements.in  requirements.txt  setup.cfg  setup.py
pytype/: .pre-commit-hooks.yaml  CMakeLists.txt  __init__.py  __main__.py  __version__.py  abc_overlay.py  abstract.py  abstract_match.py  abstract_test.py  abstract_utils.py  abstract_utils_test.py  analyze.py  analyze_test.py  annotation_utils.py  annotations_util.py  asyncio_types_overlay.py  attr_overlay.py  attribute.py  attribute_test.py  block_environment.py  block_environment_test.py  blocks.py  blocks_test.py  class_mixin.py  collections_overlay.py  collections_overlay_test.py  compare.py  compare_test.py  compat.py  compat_test.py  config.py  config_test.py  constant_folding.py  constant_folding_test.py  context.py  convert.py  convert_structural.py  convert_structural_test.py  convert_test.py  datatypes.py  (+72 more)
pytype/abstract/: CMakeLists.txt  _base.py  _classes.py  _function_base.py  _instance.py  _instance_base.py  _instances.py  _interpreter_function.py  _pytd_function.py  _singletons.py  _special_classes.py  _typing.py  abstract.py  abstract_test.py  abstract_utils.py  abstract_utils_test.py  class_mixin.py  function.py  mixin.py
pytype/ast/: CMakeLists.txt  debug.py  visitor.py
pytype/blocks/: CMakeLists.txt  block_serializer.py  blocks.py  blocks_test.py  process_blocks.py
pytype/build_scripts/: pytype_copy.py
pytype/directors/: CMakeLists.txt  annotations.py  blocks.py  blocks_test.py  directors.py  directors_test.py  parser.py  parser_libcst.py
pytype/docs/: errors.md
pytype/errors/: CMakeLists.txt  error_printer.py  error_types.py  errors.py  errors_test.py
pytype/imports/: CMakeLists.txt  base.py  builtin_stubs.py  builtin_stubs_test.py  module_loader.py  pickle_utils.py  pickle_utils_test.py  typeshed.py  typeshed_test.py
pytype/inspect/: CMakeLists.txt  graph.py
pytype/overlays/: CMakeLists.txt  abc_overlay.py  asyncio_types_overlay.py  attr_overlay.py  chex_overlay.py  classgen.py  collections_overlay.py  collections_overlay_test.py  dataclass_overlay.py  enum_overlay.py  fiddle_overlay.py  flax_overlay.py  functools_overlay.py  future_overlay.py  metaclass.py  named_tuple.py  named_tuple_test.py  overlay.py  overlay_dict.py  overlay_utils.py  pytype_extensions_overlay.py  six_overlay.py  special_builtins.py  subprocess_overlay.py  sys_overlay.py  typed_dict.py  typing_extensions_overlay.py  typing_overlay.py
pytype/patches/: python_2_7_type_annotations.diff
pytype/platform_utils/: CMakeLists.txt  path_utils.py  tempfile.py
pytype/pyc/: CMakeLists.txt  __init__.py  _compile.py  compile_bytecode.py  compiler.py  compiler_test.py  generate_opcode_diffs.py  generate_opcode_diffs_test.py  loadmarshal.py  loadmarshal_test.py  magic.py  magic_test.py  opcodes.py  opcodes_test.py  pyc.py  pyc_test.py
pytype/pyi/: CMakeLists.txt  classdef.py  conditions.py  definitions.py  entire_file_parser_test.py  evaluator.py  evaluator_test.py  function.py  lexer.h  lexer.lex  lexer.lex.cc  lexer_test.py  location.hh  metadata.py  metadata_test.py  modules.py  parse_pickle.py  parse_pyi.py  parse_typeshed_test.py  parser.h  parser.py  parser.tab.cc  parser.tab.h  parser.tab.hh  parser.y  parser.yy  parser_ext.cc  parser_memleak_test.py  parser_test.py  parser_test_base.py  position.hh  refholder.h  stack.hh  types.py  visitor.py
pytype/pytd/: CMakeLists.txt  abc_hierarchy.py  abc_hierarchy_test.py  all_tests.py  base_visitor.py  booleq.py  booleq_test.py  builtin_stubs.py  builtin_stubs_test.py  builtins.py  builtins_test.py  cfg.py  cfg_test.py  cfg_utils.py  cfg_utils_test.py  checker.py  checker_classes_test.py  checker_generics_test.py  checker_overloading_test.py  checker_test.py  checker_union_test.py  data_files.py  data_files_test.py  demo.py  escape.py  explain.py  explain_test.py  main.py  main_test.py  mro.py  mro_test.py  optimize.py  optimize_test.py  pep484.py  pep484_test.py  printer.py  pytd.py  pytd_test.py  pytd_utils.py  pytd_utils_test.py  (+17 more)
pytype/rewrite/: CMakeLists.txt  abstract.py  abstract_test.py  analyze.py  analyze_test.py  context.py  convert.py  convert_test.py  frame.py  frame_test.py  function_call_helper.py  load_abstract.py  load_abstract_test.py  operators.py  output.py  output_test.py  pretty_printer.py  stack.py  stack_test.py  variables.py  variables_test.py  vm.py  vm_test.py
pytype/stubs/: CMakeLists.txt
pytype/test_data/: async.py  async_iter.py  bad.py  bad_return_type.py  build_with_unpack.py  complex.py  complex.pyi  config.py  config.pytd  constant.py  deep_errors.py  import_error.py  imports.py  matmult.py  pytree.py  pytree.pytd  simple.py  simple.pyi  simple.pytd  star_args.py  star_args.pytd  syntax.py  tokenerror1.py  tokenize.py
pytype/tests/: CMakeLists.txt  README.md  test_abc.py  test_abc1.py  test_abc2.py  test_abstractvm.py  test_annotations.py  test_anystr.py  test_anystr1.py  test_anystr2.py  test_async_generators.py  test_attr.py  test_attr1.py  test_attr2.py  test_attributes.py  test_attributes1.py  test_attributes2.py  test_base.py  test_base_test.py  test_basic.py  test_basic1.py  test_basic2.py  test_blocks.py  test_builtins.py  test_builtins1.py  test_builtins2.py  test_builtins3.py  test_builtins4.py  test_bytecode.py  test_calls.py  test_calls1.py  test_calls2.py  test_checker.py  test_chex_overlay.py  test_classes.py  test_classes1.py  test_classes2.py  test_closures.py  test_cmp.py  test_cmp1.py  (+160 more)
pytype/tools/: CMakeLists.txt  README.md  arg_parser.py  arg_parser_test.py  config.py  config_test.py  environment.py  environment_test.py  path_tools.py  runner.py  tempfile.py  tool_utils.py  tool_utils_test.py  utils.py  utils_test.py
pytype/typegraph/: CMakeLists.txt  cfg.cc  cfg.py  cfg.pyi  cfg_assert.h  cfg_logging.cc  cfg_logging.h  cfg_test.py  cfg_utils.py  cfg_utils_test.py  map_util.h  map_util_test.cc  (+14 more)
(+599 files in other folders)
