[build-system]
requires = ["setuptools>=40.8.0", "ninja", "wheel", "pybind11>=2.10.1"]
build-backend = "setuptools.build_meta"

[tool.pytype]
inputs = [
    "pytype/**/*.py",
    "pytype_extensions/**/*.py",
]
exclude = [
    "**/*_test.py",
    "**/test_*.py",
    "**/*_test_*.py",
    "**/typeshed/",
    "**/test_data/",
    "**/testdata/",
]
