[metadata]
name = pytype
description = Python type inferencer
version = attr:pytype.__version__.__version__
long_description_content_type = text/markdown
maintainer = Google
maintainer_email = pytype@googlegroups.com
url = https://google.github.io/pytype
project_urls =
    Code = https://github.com/google/pytype
    Issue Tracker = https://github.com/google/pytype/issues
    Documentation = https://google.github.io/pytype
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development


[options]
zip_safe = False
python_requires = >=3.7, <3.11
packages =
    find:
install_requires =
    attrs>=21.4.0
    importlab>=0.8
    jinja2>=3.1.2
    libcst>=0.4.5
    networkx<2.8.4
    ninja>=1.10.0.post2
    pydot>=1.4.2
    tabulate>=0.8.10
    toml>=0.10.2
    typed_ast>=1.5.0; python_version < '3.8'
    typing-extensions>=4.3.0

[options.packages.find]
include =
    pytype
    pytype.*
    pytype_extensions
    pytype_extensions.*
exclude =
    pytype.test_data
    pytype.tests
    pytype.typeshed.tests

[options.entry_points]
console_scripts =
    annotate-ast = pytype.tools.annotate_ast.main:main
    merge-pyi = pytype.tools.merge_pyi.main:main
    pytd = pytype.pytd.main:main
    pytype = pytype.tools.analyze_project.main:main
    pytype-single = pytype.single:main
    pyxref = pytype.tools.xref.main:main

[pytype]
inputs =
    pytype/*.py
    pytype/overlays/
    pytype/pyc/
    pytype/pyi/
    pytype/pytd/
    pytype/tools/
    pytype/typegraph/
    pytype_extensions/**/*.py
exclude =
    **/*_test.py
    **/test_*.py
    **/*_test_*.py
    pytype/tools/merge_pyi/test_data/
    pytype/tools/xref/testdata/
